# realworldml

./: README.md
fizzbuzz_1.0/: fizzbuzz.py
fizzbuzz_2.0/: fizzbuzz_classify.py  fizzbuzz_keras.py  pyproject.toml  util.py
fizzbuzz_2.0/local.model/: saved_model.pb
fizzbuzz_2.0/local.model/variables/: variables.data-00000-of-00001
software_1.0/: leap.py  modulo_3.py  pyproject.toml
software_2.0/: fizzbuzz_classify.py  fizzbuzz_train.py  leap_classify.py  leap_train.py  mod3_classify.py  mod3_train.py  pyproject.toml  util.py
software_2.0/fizzbuzz.model/: saved_model.pb
software_2.0/fizzbuzz.model/variables/: variables.data-00000-of-00001  variables.index
software_2.0/leap.model/: saved_model.pb
software_2.0/leap.model/variables/: variables.data-00000-of-00001  variables.index
software_2.0/local.model/variables/: variables.index
software_2.0/mod3.model/: saved_model.pb
software_2.0/mod3.model/variables/: variables.data-00000-of-00001  variables.index
