[tool.poetry]
name = "fizzbuzz_2.0"
version = "0.1.0"
description = ""
authors = ["Pablo Fernandez <fernandezpablo85@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.5"
tensorflow = "^2.2.0"
crayons = "^0.3.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
